--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
       <div class="skills-block" id="skills">
         <div>
           <img class="photo" src="./images/photo-cv.jpg" width="90" alt="photo" >
-          <div><h2>Aksana Bebesh &#127799;</h2></div>
+          <div><h2>Aksana Bebesh <span>&#127799;</span></h2></div>
         </div>
         <div class="skills">
-          <h3>Skills and Proficiency: &#128170;</h3>
+          <h3>Skills and Proficiency:</h3>
           <ul>
             <li>PHP Advanced</li>
             <li>Symfony Intermediate</li>
@@ -408,7 +408,7 @@
               target="_blank"
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js-30-image-gallery/"
             >
-              <img src="./images/img-projects/gallery.png" alt="gallery-icon"
+              <img src="./images/img-projects/gallery.png" alt="Project gallery href"
             ></a>
           </div>
           <div class="project-pet">
@@ -417,7 +417,7 @@
               target="_blank"
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js30-memo-game/"
             >
-              <img src="./images/img-projects/memo-game.png" alt="memo-game-icon"
+              <img src="./images/img-projects/memo-game.png" alt="Memo game href"
             ></a>
           </div>
           <div class="project-pet">
@@ -425,7 +425,7 @@
               title="library"
               target="_blank"
               href="https://oksanabebesh.github.io/library2023/library/"
-              ><img src="./images/img-projects/library.png" alt="library-icon"
+              ><img src="./images/img-projects/library.png" alt="Library project href"
             ></a>
           </div>
 
@@ -434,7 +434,7 @@
               title="productly"
               target="_blank"
               href="https://oksanabebesh.github.io/LearningFridayLive/dist/"
-              ><img src="./images/img-projects/productly.png" alt="productly-icon"
+              ><img src="./images/img-projects/productly.png" alt="Productly project href"
             ></a>
           </div>
 
@@ -443,7 +443,7 @@
               title="museum"
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-museum/museum"
-              ><img src="./images/img-projects/museum.png" alt="museum-icon"
+              ><img src="./images/img-projects/museum.png" alt="Museum project href"
             ></a>
           </div>
 
@@ -452,7 +452,7 @@
               title="museum"
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-momentum/momentum/"
-              ><img src="./images/img-projects/momentum.png" alt="momentum-icon"
+              ><img src="./images/img-projects/momentum.png" alt="Momentum project href"
             ></a>
           </div>
         </div>
@@ -463,7 +463,7 @@
         <img
           class="logo"
           src="./images/rs_school_js.svg"
-          alt="logo RSSchool"
+          alt="RSSchool address"
           width="66"
         >
       </a>
@@ -471,7 +471,7 @@
         <img
           class="git-hub"
           src="./images/git_hub.jpg"
-          alt="Git hub icon"
+          alt="Git hub address"
           width="36"
         >
       </a>
