fix: validator errors

--- a/index.html
+++ b/index.html
@@ -162,8 +162,15 @@
     <main class="wrapper">
       <div class="skills-block" id="skills">
         <div>
-          <img class="photo" src="./images/photo-cv.jpg" width="90" alt="photo" >
-          <div><h2>Aksana Bebesh <span>&#127799;</span></h2></div>
+          <img
+            class="photo"
+            src="./images/photo-cv.jpg"
+            width="90"
+            alt="photo"
+          >
+          <div>
+            <h2>Aksana Bebesh <span>&#127799;</span></h2>
+          </div>
         </div>
         <div class="skills">
           <h3>Skills and Proficiency:</h3>
@@ -408,7 +415,9 @@
               target="_blank"
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js-30-image-gallery/"
             >
-              <img src="./images/img-projects/gallery.png" alt="Project gallery href"
+              <img
+                src="./images/img-projects/gallery.png"
+                alt="Project gallery href"
             ></a>
           </div>
           <div class="project-pet">
@@ -417,7 +426,9 @@
               target="_blank"
               href="https://rolling-scopes-school.github.io/oksanabebesh-JSFEPRESCHOOL2023Q2/js30-memo-game/"
             >
-              <img src="./images/img-projects/memo-game.png" alt="Memo game href"
+              <img
+                src="./images/img-projects/memo-game.png"
+                alt="Memo game href"
             ></a>
           </div>
           <div class="project-pet">
@@ -425,7 +436,9 @@
               title="library"
               target="_blank"
               href="https://oksanabebesh.github.io/library2023/library/"
-              ><img src="./images/img-projects/library.png" alt="Library project href"
+              ><img
+                src="./images/img-projects/library.png"
+                alt="Library project href"
             ></a>
           </div>
 
@@ -434,7 +447,9 @@
               title="productly"
               target="_blank"
               href="https://oksanabebesh.github.io/LearningFridayLive/dist/"
-              ><img src="./images/img-projects/productly.png" alt="Productly project href"
+              ><img
+                src="./images/img-projects/productly.png"
+                alt="Productly project href"
             ></a>
           </div>
 
@@ -443,7 +458,9 @@
               title="museum"
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-museum/museum"
-              ><img src="./images/img-projects/museum.png" alt="Museum project href"
+              ><img
+                src="./images/img-projects/museum.png"
+                alt="Museum project href"
             ></a>
           </div>
 
@@ -452,7 +469,9 @@
               title="museum"
               target="_blank"
               href="https://oksanabebesh.github.io/css-projects-collections/JSFE2021Q3-momentum/momentum/"
-              ><img src="./images/img-projects/momentum.png" alt="Momentum project href"
+              ><img
+                src="./images/img-projects/momentum.png"
+                alt="Momentum project href"
             ></a>
           </div>
         </div>
@@ -485,7 +504,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    >
+    />
 
     <script type="module">
       import Swiper from "https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.mjs";
